--- a/theme.conf
+++ b/theme.conf
@@ -32,15 +32,15 @@ Background="background.png"
 # Must be relative path.
 DimBackground="0.0"
 # Options: 0.0-1.0.
-CropBackground="true"
+CropBackground="false"
 # Default false.
 # Crop or fit background.
 # Connected with: BackgroundHorizontalAlignment and BackgroundVerticalAlignment dosn't work when set to true.
-BackgroundHorizontalAlignment="center"
+BackgroundHorizontalAlignment="left"
 # Default: center, Options: left, center, right.
 # Horizontal position of the background picture.
 # Connected with: CropBackground must be set to false.
-BackgroundVerticalAlignment="center"
+BackgroundVerticalAlignment="left"
 # Horizontal position of the background picture.
 # Default: center, Options: bottom, center, top.
 # Connected with: CropBackground must be set to false.
