--- a/theme.conf
+++ b/theme.conf
@@ -32,15 +32,15 @@ Background="background.png"
 # Must be relative path.
 DimBackground="0.0"
 # Options: 0.0-1.0.
-CropBackground="false"
+CropBackground="true"
 # Default false.
 # Crop or fit background.
 # Connected with: BackgroundHorizontalAlignment and BackgroundVerticalAlignment dosn't work when set to true.
-BackgroundHorizontalAlignment="left"
+BackgroundHorizontalAlignment="center"
 # Default: center, Options: left, center, right.
 # Horizontal position of the background picture.
 # Connected with: CropBackground must be set to false.
-BackgroundVerticalAlignment="left"
+BackgroundVerticalAlignment="center"
 # Horizontal position of the background picture.
 # Default: center, Options: bottom, center, top.
 # Connected with: CropBackground must be set to false.
@@ -64,7 +64,7 @@ OverrideLoginButtonTextColor=""
 
 PartialBlur="false"
 # Default false.
-FullBlur="true"
+FullBlur="false"
 # Default false.
 # If you use FullBlur I recommend setting BlurMax to 64 and Blur to 1.0.
 BlurMax=""
@@ -77,7 +77,7 @@ Blur=""
 HaveFormBackground="false"
 # Form background is transparent if set to false.
 # Connected with: PartialBlur and BackgroundColor.
-FormPosition="center"
+FormPosition="left"
 # Default: left, Options: left, center, right.
 
 #################### Interface Behavior ####################
